--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,4 @@
-task:
+tasks:
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
@@ -6,5 +6,5 @@ task:
       cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
-      sudo ./aws/install
+      ./aws/install
       cd /workspace/aws-course
