--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -6,5 +6,6 @@ tasks:
       cd /workspace
       curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip"
       unzip awscliv2.zip
-      sudo ./aws/install
+      ./aws/install --install-dir /workspace/aws-cli --bin-dir /workspace/bin
+      export PATH=/workspace/bin:$PATH
       cd /workspace/aws-course
